# wikiscraper

./: pyproject.toml
