[tool.poetry]
name = "repl-nix-wikiscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_wikiscraper"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
